--- a/public/asset/frontend/css/style1.css
+++ b/public/asset/frontend/css/style1.css
@@ -12,13 +12,15 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: seagreen;
+    background: url('https://upload.wikimedia.org/wikipedia/commons/d/d4/Cat_March_2010-1a.jpg');
 }
 
 .wrapper {
     width: 420px;
     background: purple;
     color: #fff;
+    border-radius: 10px;
+    padding: 30px 40px;
 }
 
 .wrapper h1 {
@@ -41,15 +43,56 @@ body {
     outline: none;
     border: 2px solid rgba(255, 255, 255, 2);
     border-radius: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 20px 45px 20px 20px;
 }
 
 .input-box input::placeholder {
-    content: white;
+    color: #fff;
 }
 
 .input-box i {
     position: absolute;
     right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+}
+
+.wrapper .remember-forgot {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14.5px;
+    margin: -15px 0 15px;
+}
+
+.remember-forgot label input {
+    accent-color: #fff;
+    margin-right: 3px;
+}
+
+.remember-forgot a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.remember-forgot a:hover {
+    text-decoration: underline;
+}
+
+.wrapper .btn {
+    width: 100%;
+    height: 45px;
+    background: #fff;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    color: #333;
+    font-weight: 600;
 }
 
 
