--- a/public/asset/frontend/css/style1.css
+++ b/public/asset/frontend/css/style1.css
@@ -12,7 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('https://upload.wikimedia.org/wikipedia/commons/d/d4/Cat_March_2010-1a.jpg');
+    background: url('https://hobihepi.com/wp-content/uploads/2024/02/Profil-Karina-aespa-Terbaru.png');
 }
 
 .wrapper {
