--- a/public/asset/frontend/css/style2.css
+++ b/public/asset/frontend/css/style2.css
@@ -1,25 +1,32 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppins",sans-serif;
+    font-family: "Sarabun",sans-serif;
     text-decoration: none;
 }
 
 nav {
     width: 100%;
     height: 6vw;
-    background: linear-gradient(125deg,gray,black);
+    background: linear-gradient(125deg,rgb(70, 107, 228),rgb(8, 80, 204));
 }
 
 .nav-container {
     max-width: 90vw;
     height: 100%;
-    margin: 0 auto;
+    margin-left: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 16px;
+    color: #333;
+    font-weight: 600;
 }
 .logonav {
     width: 3.5vw;
     object-fit: contain;
 }
+
