--- a/public/asset/frontend/css/style2.css
+++ b/public/asset/frontend/css/style2.css
@@ -21,7 +21,6 @@ nav {
     height: 100%;
     display: flex;
     align-items: center;
-    font-size: 40px;
     color: #fff;
     font-weight: 600;
 
@@ -34,12 +33,13 @@ nav {
 }
 
 .nav-departname p{
-    margin-left: 20px;
+    margin-left: 50px;
+    font-size: 1.7vw;
 }
 
 .nav-about a {
     margin-left: 500px;
-    font-size: 30px;
+    font-size: 1.3vw;
     cursor: pointer;
 }
 
@@ -52,7 +52,7 @@ nav {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     cursor: pointer;
-    font-size: 30px;
+    font-size: 1.3vw;
     color: #fff;
     font-weight: 600;
     margin-left: 50px;
@@ -66,8 +66,25 @@ nav {
 
 .sidebar {
     width: 20%;
-    height: 100%;
     padding: 10px;
     background: gray;
-    font-size: 20px;
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.sidebar-item {
+    background: #fff;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    border: #000;
+    color: #000;
+    transition: 0.3s;
+}
+
+.sidebar-item:hover {
+    background: rgb(8, 80, 204);
+    color: #fff;
+
 }
