--- a/public/asset/frontend/css/style.css
+++ b/public/asset/frontend/css/style.css
@@ -54,7 +54,7 @@
   8.3. Sidebar Nav
   8.4. Newsletter
   8.5. Tags
-  8.6. Review Post 
+  8.6. Review Post
   8.7. Top Authors
 
 9. VIDEO GALLERY
@@ -63,7 +63,7 @@
 
 11. FOOTER
 
-  11.1. Footer 
+  11.1. Footer
   11.2. Footer Widget
   11.3. Footer Info
   11.4. Copyright
@@ -119,10 +119,26 @@ h5, .h5 {
 
 /* 1.2. Common styles
 ================================================== */
+/* styles.css */
 body {
-  background: #fff;
-  color: #575769;
+    display: flex;
+    min-height: 100vh;
+    margin: 0;
 }
+.sidebar {
+    width: 250px; /* กำหนดความกว้างตามที่ต้องการ */
+    max-width: 100%; /* ป้องกันไม่ให้เกินความกว้างของหน้าจอ */
+    overflow-x: hidden; /* ซ่อน scrollbar ด้านข้างหากมีเนื้อหาล้น */
+}
+.content {
+    flex-grow: 1;
+}
+.navbar-custom {
+    margin-left: 280px;
+    width: calc(100% - 280px);
+    display: flex;
+}
+
 
 html, body {
   height: 100%;
@@ -1572,7 +1588,7 @@ a.post-category.absolute {
     margin-bottom: 20px;
   }
 }
-/* 6. FEATURE POST STYLES 
+/* 6. FEATURE POST STYLES
 ================================================== */
 .featured-posts {
   padding: 20px 0;
