--- a/public/asset/frontend/css/style.css
+++ b/public/asset/frontend/css/style.css
@@ -76,7 +76,16 @@
 /*=== MEDIA QUERY ===*/
 /* 1.1. Typography
 ================================================== */
-@import url("https://fonts.googleapis.com/css?family=Barlow:300,400,700|Libre+Franklin:400,600,700|Poppins:400,600,700,800");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins",sans-serif;
+    font-family: "Sarabun",sans-serif;
+}
 body, p {
   font-family: "Libre Franklin", sans-serif;
   line-height: 26px;
